--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
     <main id="main">
       <div id="errors"></div>
     </main>
+    <div id="searchTerms">
+      <form onsubmit="searchRepositories(); return false;">
+        <input type="text" id="searchTerms"><br>
+        <a href="#">Search</a>
+      </form>
+    </div>
     <div class="flexbox-container">
       <div>
         <h3>Repositories</h3>
-        <div id="results"></div>
+        <div id="results">
+        </div>
       </div>
       <div>
         <h3>Details</h3>
